Updated to Java 25